Replace reflection with delegation (#119)