@@ -32,7 +32,7 @@
     <settings.version>2.3.10</settings.version>
     <junit.version>4.13.2</junit.version>
     <testng.version>6.10</testng.version>
-    <bytebuddy.version>1.11.13</bytebuddy.version>
+    <bytebuddy.version>1.12.8</bytebuddy.version>
     <logback.version>1.2.5</logback.version>
     <junitparams.version>1.1.1</junitparams.version>
     <powermock.version>2.0.9</powermock.version>
@@ -224,7 +224,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-javaagent:src/test/resources/test-agent.jar</argLine>
+          <argLine>
+            -javaagent:src/test/resources/test-agent.jar
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -298,7 +301,7 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Premain-Class>com.nordstrom.automation.junit.LifecycleHooks</Premain-Class>
+              <Premain-Class>com.nordstrom.automation.junit.JUnitAgent</Premain-Class>
               <Can-Redefine-Classes>false</Can-Redefine-Classes>
               <Can-Retransform-Classes>true</Can-Retransform-Classes>
             </manifestEntries>
